# skyeng-hw-agent

./: .env.example  .gitignore  README.md  browser.py  llm_player.py  pyproject.toml  run.py
doc/adr/: 0001-full-information-solver.md  0002-no-llm-no-mcp.md  0003-geometric-pile-reading.md  0004-mouse-drag-simulation.md  0005-optional-llm-mode.md
solitaire/: board.py  cards.py  moves.py  solver.py
tests/: test_board.py  test_llm_player.py  test_solver.py
