[project]
name = "solitaire-agent-autosolver"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "playwright",
    "openai",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solitaire"]

[tool.uv]
dev-dependencies = ["pytest"]
